--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -243,7 +243,7 @@
                                 </div>
                                 <div class="course-footer">
                                     <span class="price">₹ <s><small>2,999</small></s> Your Curiosity</span>
-                                    <a href="{% if whatsapp_groups %}{{ whatsapp_groups.0.whatsapp_link }}{% else %}https://chat.whatsapp.com/LHsRJOlzUSn7IkdJCcQa84{% endif %}" target="_blank" class="course-cta">Join Now</a>
+                                    <a href="{% if whatsapp_groups %}{{ whatsapp_groups.0.whatsapp_link }}{% else %}#{% endif %}" target="_blank" class="course-cta">Join Now</a>
                                 </div>
                             </div>
                         </div>
@@ -267,7 +267,7 @@
                                 </div>
                                 <div class="course-footer">
                                     <span class="price">₹ <s><small>2,999</small></s> Your Discipline</span>
-                                    <a href="{% if whatsapp_groups|length > 1 %}{{ whatsapp_groups.1.whatsapp_link }}{% elif whatsapp_groups %}{{ whatsapp_groups.0.whatsapp_link }}{% else %}https://chat.whatsapp.com/CsAGcFvmM4D6lgBQXBYmby{% endif %}" target="_blank" class="course-cta">Join Now</a>
+                                    <a href="{% if whatsapp_groups|length > 1 %}{{ whatsapp_groups.1.whatsapp_link }}{% elif whatsapp_groups %}{{ whatsapp_groups.0.whatsapp_link }}{% else %}#{% endif %}" target="_blank" class="course-cta">Join Now</a>
                                 </div>
                             </div>
                         </div>
